# GTFS-Parser

./: .gitignore  README.md  externalFNS  externalFNS.cpp  licence.md  main  main.cpp  map.html  testing  testing.cpp  todo.txt  version.txt
convertLIVEgtfs/: convert.cpp
gtfs-rt/: jsonCoverter.cpp  readme.md
other-testing/: varadic.cpp
static-gtfs/: CMakeLists.txt  examplemainsnippets.cc  examplemainsnippets.hpp  flag_finder.cpp  gtfs.hpp  gtfs_cli.cpp  gui.hpp  main.cpp  maincli.cpp  maingui.cpp  readme.md  test  test.cpp  testing  testing.cpp
static-gtfs-2/: gtfs.hpp  testing  testing.cpp
static-gtfs/data/tes_archive-1/: stop_ordering.txt  test.txt
static-gtfs/data/yrt_archive/20250831-20251101/: calendar.txt  calendar_dates.txt  feed_info.txt  routes.txt  stops.txt  trips.txt
static-gtfs/data/yrt_archive/20251102-20251220/: agency.txt  calendar.txt  calendar_dates.txt  fare_attributes.txt  feed_info.txt  stops.txt  trips.txt
static-gtfs/data/yrt_archive/20260104-20260425/: feed_info.txt
static-gtfs/examples/: mainsnippets.cc
static-gtfs/gui-testing/: index.html  testgmplot.py  testgui1.cpp  webserver.py
static-gtfs/gui-testing/webserver/: README.md  getneareststopsjson.cpp  index.html  main.js  stopjson.cpp  tripjson.cpp
static-gtfs/testing/: calendarDateClass.cc  distanceinmeters.cpp  precision.cpp  search  search.cpp  time24.cpp  vectorerase.cpp  voidpointer  voidpointer.cpp  wordScores.cpp
webserver/: README.md  getTrips.cpp  getneareststopsjson.cpp  gtfs_config.hpp  index.html  main.cpp  server.py  stopjson.cpp  test.json  to_tokenserver.md  (+5 more)
(+30 files in other folders)
